implemented insert of entity for each get in a shared redis list limiting to the latest 10 hosts accessing
