# AKS.Three.Tier.App.Frontend/Shared/ClientDbEntity.cs
@@ -1,0 +1,8 @@
+﻿namespace AKS.Three.Tier.App.Frontend.Shared
+{
+    public class ClientDbEntity
+    {
+        public string? HostName { get; set; }
+        public DateTimeOffset? CreationDate { get; set; }
+    }
+}
